Exemple 06 - La session

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,12 @@ formulaire.execute=DoSomething.execute
 formulaire.action1=DoSomething.action1
 formulaire.action2=DoSomethingElse.action2
 formulaire.action3=DoSomething.action3
+saisie.titre1=Saisie
+saisie.titre2=Saisie
+saisie.libelle=Tapez votre nom
+saisie.valider=Valider
+saisie.effacer=Effacer
+confirmation.titre1=Confirmation
+confirmation.titre2=Confirmation
+confirmation.bonjour=Bonjour
+confirmation.retour=Retour au formulaire de saisie
