--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,3 +46,36 @@ Confirmation.radio=7-radio
 Confirmation.checkbox=8-checkbox
 Confirmation.checkboxlist=9-checkboxlist
 Confirmation.hidden=10-hidden
+
+
+Form8.francais=Fran\u00E7ais
+Form8.anglais=Anglais
+Form8.titre=Struts 2 - les tags \u00E0 valeurs multiples
+Form8.message=Struts 2 - les tags \u00E0 valeurs multiples
+Form8.langues=langues
+Form8.select1=1-select1 (multiple=false, size=1)
+Form8.select2=2-select2 (multiple=true, size=3)
+Form8.select3=3-select3 (multiple=true, size=3)
+Form8.select4=4-select4 (multiple=true, size=3)
+Form8.select5=5-select5 (multiple=true, size=3)
+Form8.checkboxlist1=6-checkboxlist1
+Form8.checkboxlist2=7-checkboxlist2
+Form8.checkboxlist3=8-checkboxlist3
+Form8.radio1=9-radio1
+Form8.radio2=10-radio2
+Form8.radio3=11-radio3
+Form8.submitText=Valider
+Confirmation8.message=Confirmation des valeurs saisies
+Confirmation8.champ=champ
+Confirmation8.valeur=valeur
+Confirmation8.select1=1-select1 (multiple=false, size=1)
+Confirmation8.select2=2-select2 (multiple=false, size=3)
+Confirmation8.select3=3-select3 (multiple=true, size=3)
+Confirmation8.select4=4-select4 (multiple=true, size=3)
+Confirmation8.select5=5-select5 (multiple=true, size=3)
+Confirmation8.checkboxlist1=6-checkboxlist1
+Confirmation8.checkboxlist2=7-checkboxlist2
+Confirmation8.checkboxlist3=8-checkboxlist3
+Confirmation8.radio1=9-radio1
+Confirmation8.radio2=10-radio2
+Confirmation8.radio3=11-radio3
